# jitc_genai_validation

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.fastapi  Dockerfile.ollama  Makefile  README.md  ReadMe.md  docker-compose.yml  docker-compose.yml.bak  env.sh  init_db.sql  installer.sh  make_dir_volumes.sh  pyproject.toml  start.sh  stop.sh  validation.sh
chroma_db_data/: chroma.sqlite3
src/app/: main.py
src/app/routers/: chat.py
src/app/services/: fine_tune_llama.py  llm_service.py
src/app/utils/: data_loader.py
src/chromadb/: Dockerfile  chromadb_main.py  start_chromadb.py  test_endpoints.py
src/fastapi/: Dockerfile.fastapi  main.py  pyproject.toml
src/fastapi/routers/: chat.py
src/fastapi/services/: agent_service.py  database.py  llm_service.py  rag_agent_service.py  rag_service.py  rag_service_old.py
src/fastapi/test/: rag_test.py
src/fastapi/utils/: data_loader.py
src/streamlit_app/: Dockerfile.streamlit  app.py  pyproject.toml  utils.py
src/streamlit_app/pages/: chatbot.py  conformance.py
streamlit_app/: Dockerfile  app.py
