[tool.poetry]
name = "jitc-genai-validation"
version = "0.1.0"
description = ""
authors = ["Martin Lopez <78863793+martinmanuel9@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.11.9"
chromadb = "^0.6.3"

[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"
